Added links to the footer

--- a/index.html
+++ b/index.html
@@ -10,9 +10,13 @@
   <body>
     <h1>World Clock</h1>
     <footer>
-      This project was coded by <a href="#">Talenta Nkhatu</a> is
-      <a href="#">open-sourced on Github</a> and
-      <a href="#">hosted on Netlify.</a>
+      This project was coded by
+      <a href="https://github.com/Talenta-Nkhatu">Talenta Nkhatu</a> is
+      <a href="https://github.com/Talenta-Nkhatu/world-clock"
+        >open-sourced on Github</a
+      >
+      and
+      <a href="https://world-clock-ta.netlify.app/">hosted on Netlify.</a>
     </footer>
     <script src="src/script.js"></script>
   </body>
