Added the basic html

--- a/index.html
+++ b/index.html
@@ -4,11 +4,41 @@
     <meta charset="UTF-8" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.30.1/moment.min.js"
+    />
     <link rel="stylesheet" href="src/style.css" />
     <title>World clock</title>
   </head>
   <body>
-    <h1>World Clock</h1>
+    <div class="container"><h1>World Clock</h1></div>
+    <select>
+      <option value="">Select a city..</option>
+      <option value="">London</option>
+      <option value="">New York</option>
+      <option value="">Auckland</option>
+    </select>
+    <div class="city">
+      <h2>Los Angelos</h2>
+      <div class="date">June 08th 2025</div>
+      <div class="time">01:13:45 PM</div>
+    </div>
+    <div class="city">
+      <h2>Sydney</h2>
+      <div class="date">June 08th 2025</div>
+      <div class="time">01:13:45 PM</div>
+    </div>
+    <div class="city">
+      <h2>Johannesburg</h2>
+      <div class="date">June 08th 2025</div>
+      <div class="time">01:13:45 PM</div>
+    </div>
+    <div class="city">
+      <h2>Paris</h2>
+      <div class="date">June 08th 2025</div>
+      <div class="time">01:13:45 PM</div>
+    </div>
     <footer>
       This project was coded by
       <a href="https://github.com/Talenta-Nkhatu">Talenta Nkhatu</a> is
