Styled the project with css

--- a/index.html
+++ b/index.html
@@ -20,28 +20,37 @@
       <option value="">Auckland</option>
     </select>
     <div class="city">
-      <h2>Los Angelos</h2>
-      <div class="date">June 08th 2025</div>
+      <div>
+        <h2>Los Angelos</h2>
+        <div class="date">June 08th 2025</div>
+      </div>
       <div class="time">01:13:45 PM</div>
     </div>
     <div class="city">
-      <h2>Sydney</h2>
-      <div class="date">June 08th 2025</div>
+      <div>
+        <h2>Los Angelos</h2>
+        <div class="date">June 08th 2025</div>
+      </div>
       <div class="time">01:13:45 PM</div>
     </div>
     <div class="city">
-      <h2>Johannesburg</h2>
-      <div class="date">June 08th 2025</div>
+      <div>
+        <h2>Los Angelos</h2>
+        <div class="date">June 08th 2025</div>
+      </div>
       <div class="time">01:13:45 PM</div>
     </div>
     <div class="city">
-      <h2>Paris</h2>
-      <div class="date">June 08th 2025</div>
+      <div>
+        <h2>Los Angelos</h2>
+        <div class="date">June 08th 2025</div>
+      </div>
       <div class="time">01:13:45 PM</div>
     </div>
+
     <footer>
-      This project was coded by
-      <a href="https://github.com/Talenta-Nkhatu">Talenta Nkhatu</a> is
+      This project was coded with ❤ by
+      <strong>Talenta Nkhatu</strong> is
       <a href="https://github.com/Talenta-Nkhatu/world-clock"
         >open-sourced on Github</a
       >
