--- a/index.html
+++ b/index.html
@@ -4,48 +4,34 @@
     <meta charset="UTF-8" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.30.1/moment.min.js"
-    />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.30.1/moment.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.47/moment-timezone.min.js"></script>
     <link rel="stylesheet" href="src/style.css" />
     <title>World clock</title>
   </head>
   <body>
-    <div class="container"><h1>World Clock</h1></div>
-    <select>
-      <option value="">Select a city..</option>
-      <option value="">London</option>
-      <option value="">New York</option>
-      <option value="">Auckland</option>
-    </select>
-    <div class="city">
-      <div>
-        <h2>Los Angelos</h2>
-        <div class="date">June 08th 2025</div>
+    <div class="container">
+      <h1>World Clock</h1>
+      <select>
+        <option value="">Select a city..</option>
+        <option value="">London</option>
+        <option value="">New York</option>
+        <option value="">Auckland</option>
+      </select>
+      <div class="city" id="los-angeles">
+        <div>
+          <h2>Los Angeles</h2>
+          <div class="date">June 08th 2025</div>
+        </div>
+        <div class="time">01:13:45 PM</div>
       </div>
-      <div class="time">01:13:45 PM</div>
-    </div>
-    <div class="city">
-      <div>
-        <h2>Los Angelos</h2>
-        <div class="date">June 08th 2025</div>
+      <div class="city" id="johannesburg">
+        <div>
+          <h2>Johannesburg</h2>
+          <div class="date">June 08th 2025</div>
+        </div>
+        <div class="time">01:13:45 PM</div>
       </div>
-      <div class="time">01:13:45 PM</div>
-    </div>
-    <div class="city">
-      <div>
-        <h2>Los Angelos</h2>
-        <div class="date">June 08th 2025</div>
-      </div>
-      <div class="time">01:13:45 PM</div>
-    </div>
-    <div class="city">
-      <div>
-        <h2>Los Angelos</h2>
-        <div class="date">June 08th 2025</div>
-      </div>
-      <div class="time">01:13:45 PM</div>
     </div>
 
     <footer>
