--- a/index.html
+++ b/index.html
@@ -4,36 +4,38 @@
     <meta charset="UTF-8" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.30.1/moment.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.47/moment-timezone.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.43/moment-timezone-with-data.min.js"></script>
     <link rel="stylesheet" href="src/style.css" />
     <title>World clock</title>
   </head>
   <body>
     <div class="container">
       <h1>World Clock</h1>
-      <select>
+      <select id="city">
         <option value="">Select a city..</option>
-        <option value="">London</option>
-        <option value="">New York</option>
-        <option value="">Auckland</option>
+        <option value="Europe/London">London</option>
+        <option value="America/Los_Angeles">Los Angeles</option>
+        <option value="Africa/Johannesburg">Johannesburg</option>
+        <option value="Pacific/Auckland">Auckland</option>
       </select>
-      <div class="city" id="los-angeles">
-        <div>
-          <h2>Los Angeles</h2>
-          <div class="date">June 08th 2025</div>
+      <div class="cities">
+        <div class="city" id="los-angeles">
+          <div>
+            <h2>Los Angeles</h2>
+            <div class="date"></div>
+          </div>
+          <div class="time"></div>
         </div>
-        <div class="time">01:13:45 PM</div>
-      </div>
-      <div class="city" id="johannesburg">
-        <div>
-          <h2>Johannesburg</h2>
-          <div class="date">June 08th 2025</div>
+        <div class="city" id="johannesburg">
+          <div>
+            <h2>Johannesburg</h2>
+            <div class="date"></div>
+          </div>
+          <div class="time"></div>
         </div>
-        <div class="time">01:13:45 PM</div>
       </div>
     </div>
-
     <footer>
       This project was coded with ❤ by
       <strong>Talenta Nkhatu</strong> is
