--- a/index.html
+++ b/index.html
@@ -18,23 +18,10 @@
         <option value="America/Los_Angeles">Los Angeles</option>
         <option value="Africa/Johannesburg">Johannesburg</option>
         <option value="Pacific/Auckland">Auckland</option>
+        <option value="Asia/Tokyo">Tokyo</option>
+        <option value="Pacific/Honolulu">Honolulu</option>
       </select>
-      <div class="cities">
-        <div class="city" id="los-angeles">
-          <div>
-            <h2>Los Angeles</h2>
-            <div class="date"></div>
-          </div>
-          <div class="time"></div>
-        </div>
-        <div class="city" id="johannesburg">
-          <div>
-            <h2>Johannesburg</h2>
-            <div class="date"></div>
-          </div>
-          <div class="time"></div>
-        </div>
-      </div>
+      <div class="cities" id="cities"></div>
     </div>
     <footer>
       This project was coded with ❤ by
